--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,23 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  color: #333;
+  background: #f5f5f5;
+}
+
 .container {
-background-color: #eee;
-max-width: 900px; 
-margin: 0 auto;
-display: grid; 
-grid-template-columns: repeat(9, 1fr);
-grid-template-rows: repeat(9, 1fr);
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+gap: 10px;
+grid-auto-rows: minmax(200px,auto);
+margin: 100px,auto;
 }
-
-.container > div {
-background-color: #ccc;
-text-align: center;
-padding: 20px;
-border: 1px solid #777;
-}
-
-.container > div:nth-child(1) {
-    grid-row: span 9;
-  }
 
   
   
