--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,21 @@ padding: 10px;
   border: skyblue 1px solid;
 }
 
+.item:nth-child(1) {
+background-color: purple;
+grid-row: span 4;
+}
+
+.item:nth-child(4) {
+  background-color:rgb(121, 2, 2);
+  grid-row: span 3;
+  }
+
+  .item:nth-child(9) {
+  background-color:rgb(43, 78, 0);
+  grid-column: span 2;
+  }
+
 @media (max-width: 800px) {
   .container {
       grid-template-columns: 1fr;
