--- a/styles.css
+++ b/styles.css
@@ -31,17 +31,26 @@ padding: 10px;
 
 .item:nth-child(1) {
 background-color: purple;
-grid-row: span 4;
+grid-column: span 3;
 }
 
-.item:nth-child(4) {
-  background-color:rgb(121, 2, 2);
-  grid-row: span 3;
+.item:nth-child(2) {
+  background-color:rgba(235, 83, 212, 0.958);
+  grid-row: span 2;
   }
 
+.item:nth-child(4) {
+  background-color:steelblue;
+  }
+
+  .item:nth-child(8) {
+    background-color:rgb(43, 78, 0);
+    grid-column: span 2;
+    }
+
   .item:nth-child(9) {
-  background-color:rgb(43, 78, 0);
-  grid-column: span 2;
+  background-color:rgb(149, 1, 1);
+  grid-column: span 3;
   }
 
 @media (max-width: 800px) {
